# smartlua

./: .gitignore  .luarc.json  CMakeLists.txt  crypto.c  crypto.h  deserialize.lua  main.lua  serialize.c  serialize.h  serialize.lua  smartlua.c  smartlua.md
example/: first.lua  inspect.lua  second.lua  third.lua
example_check_readonly/: state1.lua
meta/: .luacheckrc  00-root.lua  01-wordle.lua  02-ledger.lua  02-startgame.lua  03-guessword.lua  03-startgame.lua  04-deposit.lua  04-giveclue.lua  05-begin.lua  05-guessword.lua  06-giveclue.lua  06-guessword.lua  07-giveclue.lua  07-guessword.lua  08-guessword.lua  08-winner.lua  09-giveclue.lua  10-guessword.lua  11-winner.lua  12-claim.lua  run.sh
protected_variable/: contract.lua  transition1.lua  transition2.lua  transition3.lua
wordle/: contract.lua  readme.md  win1.lua  win2.lua  win3.lua  win4.lua  win5.lua  win6.lua  win7.lua
